deployment/overleaf/overleaf-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.34.0 (cbf2835db)
  labels:
    io.kompose.service: overleaf
  name: overleaf
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: overleaf
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml
        kompose.version: 1.34.0 (cbf2835db)
      labels:
        io.kompose.service: overleaf
    spec:
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - preference:
                matchExpressions:
                  - key: nvidia.com/gpu.present
                    operator: NotIn
                    values:
                      - "true"
              weight: 100
      containers:
        - env:
            - name: EMAIL_CONFIRMATION_DISABLED
              valueFrom:
                configMapKeyRef:
                  key: EMAIL_CONFIRMATION_DISABLED
                  name: sharelatex-variables
            - name: ENABLED_LINKED_FILE_TYPES
              valueFrom:
                configMapKeyRef:
                  key: ENABLED_LINKED_FILE_TYPES
                  name: sharelatex-variables
            - name: ENABLE_CONVERSIONS
              valueFrom:
                configMapKeyRef:
                  key: ENABLE_CONVERSIONS
                  name: sharelatex-variables
            - name: EXTERNAL_AUTH
              valueFrom:
                configMapKeyRef:
                  key: EXTERNAL_AUTH
                  name: sharelatex-variables
            - name: GIT_BRIDGE_ENABLED
              value: "false"
            - name: GIT_BRIDGE_HOST
              value: git-bridge
            - name: GIT_BRIDGE_PORT
              value: "8000"
            - name: OVERLEAF_APP_NAME
              valueFrom:
                configMapKeyRef:
                  key: OVERLEAF_APP_NAME
                  name: sharelatex-variables
            - name: OVERLEAF_MONGO_URL
              valueFrom:
                configMapKeyRef:
                  key: OVERLEAF_MONGO_URL
                  name: sharelatex-variables
            - name: OVERLEAF_REDIS_HOST
              valueFrom:
                configMapKeyRef:
                  key: OVERLEAF_REDIS_HOST
                  name: sharelatex-variables
            - name: REDIS_HOST
              valueFrom:
                configMapKeyRef:
                  key: REDIS_HOST
                  name: sharelatex-variables
            - name: REDIS_PORT
              valueFrom:
                configMapKeyRef:
                  key: REDIS_PORT
                  name: sharelatex-variables
            - name: OVERLEAF_SITE_URL
              valueFrom:
                configMapKeyRef:
                  key: OVERLEAF_SITE_URL
                  name: sharelatex-variables
            - name: OVERLEAF_BEHIND_PROXY
              valueFrom:
                configMapKeyRef:
                  key: OVERLEAF_BEHIND_PROXY
                  name: sharelatex-variables
            - name: V1_HISTORY_URL
              value: http://overleaf:3100/api
          image: gpu-harbor.act.buaa.edu.cn/user-liyilong/sharelatex/sharelatex:06181007-d4f4
          name: overleaf
          ports:
            - containerPort: 80
              protocol: TCP
          volumeMounts:
            - mountPath: /var/lib/overleaf
              name: overleaf-data
          resources:
            limits:
              cpu: 8000m
              memory: 16Gi
            requests:
              cpu: 8000m
              memory: 16Gi
      securityContext:
        runAsUser: 0
        runAsGroup: 0
      restartPolicy: Always
      terminationGracePeriodSeconds: 60
      volumes:
        - name: overleaf-data
          persistentVolumeClaim:
            claimName: overleaf-data
