deployment/overleaf/overleaf-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: 1000m
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
  name: overleaf
  namespace: overleaf
spec:
  ingressClassName: nginx
  rules:
    - host: overleaf.gpu.act.buaa.edu.cn
      http:
        paths:
          - backend:
              service:
                name: overleaf
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - gpu.act.buaa.edu.cn
      secretName: overleaf-tls-secret
